--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -211,9 +211,42 @@
     text-align: justify;
 }
 
+// Our team
+
+.home-our-team {
+    padding: 30px;
+}
+
+.home-our-team__title {
+    font-size: 2rem;
+    text-align: center;
+    padding-bottom: 30px;
+}
+
+.home-our-team__grid {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 30px;
+}
+
+.home-our-team__card {
+    padding: 15px;
+    text-align: center;
+    @include flex-center;
+    flex-direction: column;
+    row-gap: 15px;
+    background: #fff;
+}
+
 @media (max-width: 1300px) {
     .home__services-grid {
         grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 1200px) {
+    .home-our-team__grid {
+        grid-template-columns: repeat(4, 1fr);
     }
 }
 
@@ -239,58 +272,22 @@
     .faq__list {
         width: 100%;
     }
+
+    .home-our-team {
+        padding: 30px 15px;
+    }
+
+    .home-our-team__grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @media (max-width: 500px) {
     .home-top__btn-container {
         flex-direction: column;
     }
-}
 
-//
-
-.home-our-team {
-    padding: 30px;
-}
-
-.about-us__team-title {
-    font-size: 2rem;
-    text-align: center;
-    padding-bottom: 30px;
-}
-
-.about-us__team-grid {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 30px;
-}
-
-.team-card {
-    padding: 15px;
-    text-align: center;
-    @include flex-center;
-    flex-direction: column;
-    width: 100%;
-    background: #fff;
-}
-
-@media (max-width: 1200px) {
-    .about-us__team-grid {
-        grid-template-columns: repeat(4, 1fr);
-    }
-}
-
-@media (max-width: 900px) {
-    .home-our-team {
-        padding: 30px 15px;
-    }
-    .about-us__team-grid {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-@media (max-width: 600px) {
-    .about-us__team-grid {
+    .home-our-team__grid {
         grid-template-columns: repeat(1, 1fr);
     }
 }
