--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -6,7 +6,7 @@
     right: 0;
     left: 0;
     background: var(--bg-clr);
-    min-height: calc(100vh - 130px);
+    min-height: calc(100svh - 130px);
     padding: 15px;
     transform: translateY(30px);
     opacity: 0;
