--- a/src/pages/SmileGallery/SmileGallery.scss
+++ b/src/pages/SmileGallery/SmileGallery.scss
@@ -26,12 +26,14 @@
     width: 100%;
     height: 300px;
     overflow: hidden;
+    border-radius: 30px;
 
     img {
         position: absolute;
         width: 100%;
         height: 100%;
         object-fit: cover;
+        overflow: hidden;
     }
 }
 
@@ -47,6 +49,7 @@
     border-radius: 15px;
     padding: 0 7.5px;
     background: rgba(255, 255, 255, 0.5);
+    pointer-events: none;
     transition: opacity 0.15s;
 }
 
@@ -62,6 +65,7 @@
     border-radius: 15px;
     padding: 0 7.5px;
     background: rgba(255, 255, 255, 0.5);
+    pointer-events: none;
     transition: opacity 0.15s;
 }
 
