--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -93,6 +93,17 @@
     text-align: center;
 }
 
+.home__services-search {
+    font-size: 1rem;
+    text-align: center;
+    border: 1px solid var(--accent-clr);
+    width: 100%;
+    height: 60px;
+    border-radius: 30px;
+    padding: 15px;
+    margin-bottom: 30px;
+}
+
 .home__services-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
