--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -10,6 +10,12 @@
     align-items: center;
 }
 
+@mixin flex-start {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
 @mixin flex-between-center {
     display: flex;
     justify-content: space-between;
