--- a/src/pages/PriceList/PriceList.scss
+++ b/src/pages/PriceList/PriceList.scss
@@ -1,81 +1,82 @@
 .price-list {
-    opacity: 0;
-    animation: revealPriceList 1s forwards;
+	opacity: 0;
+	animation: revealPriceList 1s forwards;
 }
 
 @keyframes revealPriceList {
-    to {
-        opacity: 1;
-    }
+	to {
+		opacity: 1;
+	}
 }
 
 .price-list__wrapper {
-    padding: 0 30px 30px;
+	padding: 0 30px 30px;
 }
 
 .price-list__table {
-    border-collapse: collapse;
-    width: 100%;
+	border-collapse: collapse;
+	width: 100%;
 }
 
 .price-list__title {
-    text-align: start;
-    font-size: 1.5rem;
-    font-weight: 500;
-    padding: 30px 0;
+	text-align: start;
+	font-size: 1.5rem;
+	font-weight: 500;
+	padding: 30px 0;
 }
 
 tr {
-    height: 60px;
+	height: 60px;
 }
 
 td:nth-child(1) {
-    text-align: left;
-    padding-left: 15px;
+	text-align: left;
+	padding-left: 15px;
 }
 
 td:nth-child(2) {
-    text-align: right;
-    padding-right: 15px;
+	text-align: right;
+	padding-right: 15px;
 }
 
 tr:nth-child(odd) {
-    background: var(--accent-clr);
+	background: var(--accent-clr);
 }
 
 tr:nth-child(odd) td:nth-of-type(1) {
-    border-radius: 30px 0 0 30px;
+	border-radius: 30px 0 0 30px;
 }
 
 tr:nth-child(odd) td:nth-of-type(2) {
-    border-radius: 0 30px 30px 0;
+	border-radius: 0 30px 30px 0;
 }
 
 .filter-btn-wrapper {
-    display: flex;
-    gap: 30px;
-    flex-wrap: wrap;
-    margin: 30px 30px 0;
+	display: flex;
+	gap: 15px;
+	flex-wrap: wrap;
+	margin: 30px 30px 0;
 }
 
 .filter-btn {
-    height: 60px;
-    border-radius: 30px;
-    padding: 0 15px;
-    border: 1px solid var(--accent-clr);
+	height: 60px;
+	min-width: 60px;
+	border-radius: 30px;
+	padding: 0 15px;
+	border: 1px solid var(--accent-clr);
 }
 
 .active-filter-btn {
-    background: var(--accent-clr);
+	background: var(--accent-clr);
 }
 
 @media (max-width: 900px) {
-    .price-list__wrapper {
-        padding: 0 15px 30px;
-    }
+	.price-list__wrapper {
+		padding: 0 15px 30px;
+	}
 
-    .filter-btn-wrapper {
-        margin: 30px 15px 0;
-        gap: 15px;
-    }
+	.filter-btn-wrapper {
+		margin: 30px 15px 0;
+		gap: 15px;
+	}
 }
