--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -5,6 +5,7 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, calc(-50% + 30px));
+	z-index: 100;
 	width: 50%;
 	height: 500px;
 	@include flex-evenly-center;
@@ -14,6 +15,7 @@
 	backdrop-filter: blur(30px);
 	box-shadow: var(--cstm-box-shadow);
 	border-radius: 30px;
+	padding: 10px;
 	opacity: 0;
 	animation: animateBanner 0.3s 1s forwards;
 }
@@ -54,8 +56,19 @@
 	}
 }
 
+.banner__map {
+	width: 100%;
+	border-radius: 0 0 25px 25px;
+}
+
 @media screen and (width <= 1000px) {
 	.banner {
 		width: 75%;
+	}
+}
+
+@media screen and (width <= 600px) {
+	.banner {
+		width: 90%;
 	}
 }
