--- a/src/components/PageTitle/PageTitle.scss
+++ b/src/components/PageTitle/PageTitle.scss
@@ -1,45 +1,43 @@
-@use "./../../mixins" as *;
+@use "./../../styles/mixins" as *;
 
 .page-title {
-    padding: 160px 30px 0;
+	padding: 160px 30px 0;
 }
 
 .page-title__links {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    flex-wrap: wrap;
+	@include flex-start-center;
+	flex-wrap: wrap;
 
-    span {
-        @include grid-center;
-        height: 30px;
-        padding: 0 7.5px;
+	span {
+		@include grid-center;
+		height: 30px;
+		padding: 0 7.5px;
 
-        &:nth-last-of-type(1) {
-            color: rgba(0, 0, 0, 0.5);
-        }
-    }
+		&:nth-last-of-type(1) {
+			color: rgba(0, 0, 0, 0.5);
+		}
+	}
 }
 
 .page-title__link {
-    @include grid-center;
-    height: 30px;
-    border-radius: 15px;
-    padding: 0 7.5px;
-    transition: background-color 300ms;
+	@include grid-center;
+	height: 30px;
+	border-radius: 15px;
+	padding: 0 7.5px;
+	transition: background-color 300ms;
 
-    &:hover {
-        background: var(--accent-clr);
-    }
+	&:hover {
+		background: var(--accent-clr);
+	}
 }
 
 .page-title__title {
-    padding-top: 30px;
-    font-size: clamp(1rem, 4vw, 2rem);
+	padding-top: 30px;
+	font-size: clamp(1rem, 4vw, 2rem);
 }
 
 @media (max-width: 900px) {
-    .page-title {
-        padding: 160px 15px 0;
-    }
+	.page-title {
+		padding: 160px 15px 0;
+	}
 }
