--- a/src/components/LngSelect/LngSelect.scss
+++ b/src/components/LngSelect/LngSelect.scss
@@ -38,19 +38,20 @@
 
 .lang-select__list {
 	position: absolute;
+	left: 50%;
+	transform: translate(-50%, 30px);
 	width: max-content;
 	border-radius: 20px;
 	background: var(--bg-clr);
 	box-shadow: var(--cstm-box-shadow);
 	opacity: 0;
-	transform: translateY(30px);
 	pointer-events: none;
 	transition: opacity 0.3s, transform 0.3s;
 }
 
 .lang-select__list--visible {
 	opacity: 1;
-	transform: translateY(0);
+	transform: translate(-50%, 0);
 	pointer-events: all;
 }
 
