--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -21,11 +21,12 @@
 }
 
 .menu-item {
-	border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+	border-bottom: 1px solid var(--accent-clr);
 	padding: 5px 0;
 }
 
 .menu__link {
+	font-weight: 500;
 	height: 60px;
 	@include flex-between-center;
 	transition: color 0.15s;
@@ -41,13 +42,31 @@
 
 .menu-dd__btn {
 	@include flex-between-center;
+	width: 100%;
 	height: 60px;
-	cursor: pointer;
 	transition: color 0.15s;
 
 	&:hover {
 		color: var(--accent-clr);
 	}
+}
+
+.menu__nav-btn-txt {
+	font-weight: 500;
+}
+
+.menu__nav-btn-icon {
+	width: 10px;
+	aspect-ratio: 1 / 1;
+	// TODO:
+	clip-path: polygon(50% 100%, 0 0, 100% 0);
+	background: #000;
+	pointer-events: none;
+	transition: rotate 0.6s;
+}
+
+.menu__nav-btn-icon--active {
+	rotate: 180deg;
 }
 
 .menu-dd__wrapper {
