--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -119,6 +119,178 @@
 	pointer-events: all;
 }
 
+// burger-btn
+
+.burger-btn__wrapper {
+	display: none;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column-reverse;
+	cursor: pointer;
+
+	span {
+		font-size: 0.75rem;
+	}
+}
+
+.burger-btn {
+	position: relative;
+	width: 30px;
+	height: 0;
+	padding: 15px 0;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.burger-btn::before {
+	position: absolute;
+	content: "";
+	width: 100%;
+	height: 2px;
+	background: #000;
+	translate: 0 -10px;
+	transition: all 0.3s;
+}
+
+.burger-btn::after {
+	position: absolute;
+	content: "";
+	width: 100%;
+	height: 2px;
+	background: #000;
+	translate: 0 10px;
+	transition: all 0.3s;
+}
+
+.burger-btn__center-line {
+	position: absolute;
+	width: 50%;
+	height: 2px;
+	background: #000;
+	transition: all 0.3s 0.3s;
+}
+
+.burger-btn--active::before {
+	rotate: -45deg;
+	translate: 0 0;
+	transition: all 0.3s 0.3s;
+}
+
+.burger-btn--active::after {
+	rotate: 45deg;
+	translate: 0 0;
+	transition: all 0.3s 0.3s;
+}
+
+.burger-btn__center-line--active {
+	width: 0;
+	transition: all 0.3s;
+}
+
+// menu
+
+.menu {
+	position: absolute;
+	top: 130px;
+	right: 0;
+	left: 0;
+	background: var(--bg-clr);
+	min-height: calc(100svh - 130px);
+	padding: 15px;
+	transform: translateY(30px);
+	opacity: 0;
+	pointer-events: none;
+	transition: opacity 0.6s, transform 0.6s;
+}
+
+.menu--active {
+	transform: translateY(0);
+	opacity: 1;
+	pointer-events: all;
+}
+
+.menu-item {
+	border-bottom: 1px solid var(--accent-clr);
+	padding: 5px 0;
+}
+
+.menu__link {
+	font-weight: 500;
+	height: 60px;
+	@include flex-between-center;
+	transition: color 0.15s;
+
+	&:hover {
+		color: var(--accent-clr);
+	}
+}
+
+.menu__link--active {
+	color: var(--accent-clr);
+}
+
+.menu-dd__btn {
+	@include flex-between-center;
+	width: 100%;
+	height: 60px;
+	transition: color 0.15s;
+
+	&:hover {
+		color: var(--accent-clr);
+	}
+}
+
+.menu__nav-btn-txt {
+	font-weight: 500;
+}
+
+.menu__nav-btn-icon {
+	width: 10px;
+	aspect-ratio: 1 / 1;
+	// TODO:
+	clip-path: polygon(50% 100%, 0 0, 100% 0);
+	background: #000;
+	pointer-events: none;
+	transition: rotate 0.6s;
+}
+
+.menu__nav-btn-icon--active {
+	rotate: 180deg;
+}
+
+.menu-dd__wrapper {
+	display: grid;
+	grid-template-rows: 0fr;
+	overflow: hidden;
+	transition: grid-template-rows 0.6s;
+}
+
+.menu-dd__wrapper--active {
+	grid-template-rows: 1fr;
+}
+
+.menu-dd {
+	overflow: hidden;
+	display: flex;
+	flex-direction: column;
+	row-gap: 5px;
+}
+
+.menu__dd-link {
+	transition: color 0.15s;
+
+	&:hover {
+		color: var(--accent-clr);
+	}
+}
+
+@media (max-width: 800px) {
+	.burger-btn__wrapper {
+		display: flex;
+	}
+}
+
 @media (max-width: 900px) {
 	.header {
 		padding: 0 15px;
