--- a/src/components/PageTitle/PageTitle.scss
+++ b/src/components/PageTitle/PageTitle.scss
@@ -33,7 +33,8 @@
 
 .page-title__title {
 	padding-top: 30px;
-	font-size: clamp(1rem, 4vw, 2rem);
+	font-size: clamp(1.5rem, 4vw, 2rem);
+	font-weight: 500;
 }
 
 @media (max-width: 900px) {
