--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -6,10 +6,11 @@
 	left: 50%;
 	transform: translate(-50%, calc(-50% + 30px));
 	z-index: 100;
-	width: 50%;
-	height: 500px;
-	@include flex-evenly-center;
+	width: calc(100% - 30px);
+	max-width: 600px;
+	@include flex-center;
 	flex-direction: column;
+	row-gap: 30px;
 	background: rgba(255, 255, 255, 0.5);
 	-webkit-backdrop-filter: blur(30px);
 	backdrop-filter: blur(30px);
@@ -27,14 +28,8 @@
 	}
 }
 
-.banner__header {
-	top: 0;
-	left: 0;
-	width: 100%;
-	position: absolute;
-	padding: 15px;
-	display: flex;
-	justify-content: flex-end;
+.banner__btn {
+	align-self: flex-end;
 }
 
 .banner__title {
@@ -58,17 +53,5 @@
 
 .banner__map {
 	width: 100%;
-	border-radius: 0 0 25px 25px;
-}
-
-@media screen and (width <= 1000px) {
-	.banner {
-		width: 75%;
-	}
-}
-
-@media screen and (width <= 600px) {
-	.banner {
-		width: 90%;
-	}
+	border-radius: 25px;
 }
