Update ToTopBtn component

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,5 +1,6 @@
 :root {
-    --bg-clr: #ebfbf4;
-    --accent-clr: #7fd2c8;
-    --cstm-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+	--bg-clr: #ebfbf4;
+	--accent-clr: #7fd2c8;
+	--accent-clr-semi-tp: rgba(127, 210, 200, 0.5);
+	--cstm-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
 }
