--- a/src/components/ToTopBtn/ToTopBtn.scss
+++ b/src/components/ToTopBtn/ToTopBtn.scss
@@ -3,20 +3,22 @@
 .to-top-btn {
 	position: fixed;
 	right: 30px;
-	bottom: 30px;
+	bottom: -60px;
 	z-index: 2;
 	width: 60px;
 	aspect-ratio: 1/1;
 	@include grid-center;
-	background: var(--accent-clr);
+	background: var(--accent-clr-semi-tp);
 	border-radius: 50%;
-	cursor: pointer;
-	transform: translateY(90px);
-	transition: transform 300ms;
+	transition: all 300ms;
+
+	&:hover {
+		background: var(--accent-clr);
+	}
 }
 
 .to-top-btn--active {
-	transform: translateY(0);
+	bottom: 30px;
 }
 
 .progress {
@@ -33,4 +35,14 @@
 	background: var(--accent-clr);
 	border-radius: inherit;
 	color: #fff;
+}
+
+@media screen and (width <= 900px) {
+	.to-top-btn {
+		right: 15px;
+	}
+
+	.to-top-btn--active {
+		bottom: 15px;
+	}
 }
