--- a/src/components/ToTopBtn/ToTopBtn.scss
+++ b/src/components/ToTopBtn/ToTopBtn.scss
@@ -3,14 +3,17 @@
 .to-top-btn {
 	position: fixed;
 	right: 30px;
-	bottom: -60px;
+	bottom: 30px;
 	z-index: 2;
 	width: 60px;
 	aspect-ratio: 1/1;
 	@include grid-center;
-	background: var(--accent-clr-semi-tp);
 	border-radius: 50%;
-	transition: all 300ms;
+	background: var(--accent-clr-semi-tp);
+	transform: translateY(calc(100% + 30px));
+	// TODO: learn this
+	will-change: transform;
+	transition: transform 300ms, background-color 300ms;
 
 	&:hover {
 		background: var(--accent-clr);
@@ -18,7 +21,7 @@
 }
 
 .to-top-btn--active {
-	bottom: 30px;
+	transform: translateY(0);
 }
 
 .progress {
@@ -40,9 +43,7 @@
 @media screen and (width <= 900px) {
 	.to-top-btn {
 		right: 15px;
-	}
-
-	.to-top-btn--active {
 		bottom: 15px;
+		transform: translateY(calc(100% + 15px));
 	}
 }
